fix h2 overflow issues

--- a/css/posts-template.css
+++ b/css/posts-template.css
@@ -52,6 +52,11 @@ h1, h2{
   font-family: 'Source Sans Pro', sans-serif;
 }
 
+h2 {
+  white-space: nowrap;
+  overflow: hidden;
+}
+
 p {
   text-align: left;
   font-size: 18px;
